...
            app:layout_constraintHorizontal_bias="0.68"
            app:layout_constraintStart_toEndOf="@+id/registerImage"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/fullNameRegister"
            android:layout_width="277dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerImage" />

        <EditText
            android:id="@+id/emailRegister"
            android:layout_width="277dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="8dp"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullNameRegister" />

        <EditText
            android:id="@+id/passwordRegister"
            android:layout_width="277dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
...
