...
            android:text="@string/register_and_login_footer"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_main_layout_button"
            app:layout_constraintVertical_bias="0.394" />

        <Button
            android:id="@+id/register_main_layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="48dp"
...
